# steamaudio

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
bevy/: Cargo.toml
bevy/examples/: spatial_audio_3d.rs
bevy/src/: lib.rs
examples/: ambisonics.rs  binaural.rs  direct_effect.rs
include/: phonon.h
lib/windows-x86/: phonon.lib
src/: ambisonics_binaural_effect.rs  ambisonics_decode_effect.rs  ambisonics_encode_effect.rs  ambisonics_panning_effect.rs  ambisonics_rotation_effect.rs  binaural_effect.rs  buffer.rs  context.rs  direct_effect.rs  effect.rs  error.rs  fmod.rs  geometry.rs  hrtf.rs  lib.rs  panning_effect.rs  scene.rs  simulation.rs  transform.rs  virtual_surround_effect.rs
steamaudio-sys/: Cargo.toml  build.rs
steamaudio-sys/include/: phonon.h
steamaudio-sys/lib/osx/phonon.bundle/Contents/: Info.plist
