[workspace]
members = ["bevy"]
resolver = "2"

[package]
name = "steamaudio"
version = "0.0.0"
authors = ["Valaphee <iam@valaphee.com>"]
description = "Steam Audio for Rust"
repository = "https://github.com/valaphee/steamaudio.git"
license = "Apache-2.0"
edition = "2021"

[dependencies]
glam = "0.24"
thiserror = "1.0"
tracing = "0.1"

rodio = { version = "0.17", default-features = false, optional = true }

[build-dependencies]
tokio = { version = "1.34", features = ["full"] }
bindgen = "0.69"
reqwest = "0.11"
zip-extract = "0.1.2"

[features]
rodio = ["dep:rodio"]
