[package]
name = "steamaudio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Steam Audio for Rust"
authors = ["Valaphee <iam@valaphee.com>"]
repository = "https://github.com/valaphee/steamaudio.git"
license = "Apache-2.0"

[dependencies]
glam = "0.24"
thiserror = "1.0"
tracing = "0.1"

rodio = { version = "0.17", default-features = false, optional = true }

[dev-dependencies]
rodio = { version = "0.17" }

[build-dependencies]
bindgen = "0.69"

[features]
rodio = ["dep:rodio"]
