[package]
name = "steamaudio"
version = "0.1.0"
edition = "2021"
description = "Steam Audio for Rust"
authors = ["Valaphee <iam@valaphee.com>"]
repository = "https://github.com/valaphee/steamaudio.git"
license = "Apache-2.0"

[features]
rodio = ["dep:rodio"]
fmod = []

[dependencies]
glam = "0.25"
thiserror = "1.0"
tracing = "0.1"

rodio = { version = "0.17", default-features = false, optional = true }

[dev-dependencies]
rodio = { version = "0.17" }

[build-dependencies]
bindgen = "0.69"

[[example]]
name = "ambisonics"
required-features = ["rodio"]

[[example]]
name = "binaural"
required-features = ["rodio"]

[[example]]
name = "direct_effect"
required-features = ["rodio"]
