[package]
name = "bevy_steamaudio"
version = "0.0.0"
authors = ["Valaphee <iam@valaphee.com>"]
description = "Steam Audio integration for Bevy"
repository = "https://github.com/valaphee/steamaudio.git"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
rodio = { version = "0.17.1", default-features = false }
steamaudio = { path = "..", features = ["rodio"] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = ["bevy_audio", "bevy_winit", "bevy_pbr", "ktx2", "zstd", "tonemapping_luts", "mp3"] }
